# quaternion-matrix

./: Cargo.toml  README.md
src/: lib.rs  m.rs  q.rs  v.rs
src/m/: m3.rs  m4.rs
src/v/: v3.rs  v4.rs
