[package]
name = "quaternion-matrix"
version = "0.0.7" # change with html_root_url in lib.rs
edition = "2021"
authors = ["nomissbowling <nomissbowling@yahoo.co.jp>"]

description = "quaternion matrix for Rust"
keywords = ["directx", "3d", "opengl", "quaternion", "matrix"]
categories = ["development-tools", "graphics", "rendering", "rendering::graphics-api"]
license = "MIT"

documentation = "https://docs.rs/quaternion-matrix/"
homepage = "https://crates.io/crates/quaternion-matrix"
repository = "https://github.com/nomissbowling/quaternion-matrix"

readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "qm"

[dependencies]
num = { version = "0.4" } # "0.4.1"
